--- a/Ridh_Online_Shopping.html
+++ b/Ridh_Online_Shopping.html
@@ -187,59 +187,61 @@
                         Desktop Laptop
                         </button>
                         <div class="dropdown-menu">
-                         <!-- Dropdown menu links -->
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
+                            <!-- Dropdown menu links -->
+                            <a class="dropdown-item" href="#">A</a>
+                            <a class="dropdown-item" href="#">B</a>
+                            <a class="dropdown-item" href="#">C</a>
                         </div>
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Laptop Computer
                         </button>
                         <div class="dropdown-menu">
                              <!-- Dropdown menu links -->
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
+                            <a class="dropdown-item" href="#">D</a>
+                            <a class="dropdown-item" href="#">E</a>
+                            <a class="dropdown-item" href="#">F</a>
                         </div>
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Components Desktop
                         </button>
                         <div class="dropdown-menu">
                             <!-- Dropdown menu links -->
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
+                            <a class="dropdown-item" href="#">G</a>
+                            <a class="dropdown-item" href="#">H</a>
+                            <a class="dropdown-item" href="#">I</a>
                         </div>
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Gaming Gear
                             </button>
                         <div class="dropdown-menu">
                             <!-- Dropdown menu links -->
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
+                            <a class="dropdown-item" href="#">J</a>
+                            <a class="dropdown-item" href="#">K</a>
+                            <a class="dropdown-item" href="#">L</a>
                             </div>
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Projector Device
                         </button>
                             <div class="dropdown-menu">
-                                <!-- Dropdown menu links -->
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
+                            <!-- Dropdown menu links -->
+                            <a class="dropdown-item" href="#">M</a>
+                            <a class="dropdown-item" href="#">N</a>
+                            <a class="dropdown-item" href="#">O</a>
                             </div>
                         <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Printer & Scanner
                         </button>
                             <div class="dropdown-menu">
                             <!-- Dropdown menu links -->
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
-                            <a class="dropdown-item" href="#">News</a>
+                            <a class="dropdown-item" href="#">P</a>
+                            <a class="dropdown-item" href="#">Q</a>
+                            <a class="dropdown-item" href="#">R</a>
                         </div>
+                    </div>
                 </div>
-            </div>
-
+                <button class="navbar-toggler bg-info" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav nav-fill w-100 bg">
                     <li class="nav-item active">
