--- a/Sabay_News.html
+++ b/Sabay_News.html
@@ -28,9 +28,9 @@
         margin-bottom: 22px;
       }
       .sticky {
-	      position: -webkit-sticky;
-	      position: sticky;
-      	top: 0;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
         z-index: 2;
       }
       .khFont {
@@ -229,7 +229,8 @@
           <div id="triangle-topleft"></div>
           <div id="line"></div>
           <!--  -->
-        </div> ​​
+        </div>
+        ​​
       </div>
       <br /><br />
       <div class="container">
@@ -330,49 +331,81 @@
         </div>
       </div>
       <div class="row">
-          <!--  -->
-          <div id="trapezoid"><div​ class="khFont" id="textinside">វីដេអូ ></div​></div>
-          <div id="triangle-topleft"></div>
-          <div id="line"></div>
-          <!--  -->
+        <!--  -->
+        <div id="trapezoid"><div​ class="khFont" id="textinside">វីដេអូ ></div​></div>
+        <div id="triangle-topleft"></div>
+        <div id="line"></div>
+        <!--  -->
+      </div>
+    </div>
+    <br />
+    <br /><br />
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="Sabay_News Images/Tech_News.jpg" class="card-img-top" alt="" />
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
         </div>
-      </div><br>
-      <br><br>
-        <div class="container">
+
+        <div class="col-8">
           <div class="row">
-            <div class="card col-4" style="width: 18rem;">
-              <img src="Sabay_News Images/Tech_News.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div>
-          <div class="col-2">
+            <div class="col-3">
               <img src="Sabay_News Images/Sport_News.jpg" class="img-pulse" width="160" height="100" alt="" />
-            <div>
-              <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
             </div>
-          </div>
-          <div class="col-2">
-            <img src="Sabay_News Images/News_Reporter.jpg" class="img-pulse" width="160" height="100" alt="" />
-            <div>
-              <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+            <div class="col-3">
+              <img src="Sabay_News Images/News_Reporter.jpg" class="img-pulse" width="160" height="100" alt="" />
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
             </div>
-          </div>
-          <div class="col-2">
-            <img src="Sabay_News Images/Joe_Biden.jpg" class="img-pulse" width="160" height="100" alt="" />
-            <div>
-              <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+            <div class="col-3">
+              <img src="Sabay_News Images/Joe_Biden.jpg" class="img-pulse" width="160" height="100" alt="" />
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
             </div>
-          </div>
-          <div class="col-2">
+            <div class="col-3">
               <img src="Sabay_News Images/Sport_News.jpg" class="img-pulse" width="160" height="100" alt="" />
-            <div>
-              <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-3">
+              <img src="Sabay_News Images/Sport_News.jpg" class="img-pulse" width="160" height="100" alt="" />
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
+            </div>
+            <div class="col-3">
+              <img src="Sabay_News Images/News_Reporter.jpg" class="img-pulse" width="160" height="100" alt="" />
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
+            </div>
+            <div class="col-3">
+              <img src="Sabay_News Images/Joe_Biden.jpg" class="img-pulse" width="160" height="100" alt="" />
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
+            </div>
+            <div class="col-3">
+              <img src="Sabay_News Images/Sport_News.jpg" class="img-pulse" width="160" height="100" alt="" />
+              <div>
+                <p class="khFont01 khFont-small">ស្ថានភាពល្អបន្តិចហើយ ចំនួនអ្នកឆ្លងថយចុះជាងពីម្សិលមិញ ក្នុងតួលេខជាង ៥០០នាក់</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>​
+    </div>
+    ​
 
     <!-- Footer -->
     <footer class="footer text-center text-white">
