--- a/Sabay_News.html
+++ b/Sabay_News.html
@@ -20,6 +20,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanuman:wght@400;700&display=swap" rel="stylesheet" />
     <!-- Animation Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--  -->
+    <link rel="stylesheet" href="Sabay_News_Colors.css" />
     <title>Sabay News</title>
     <style>
       .navbar {
@@ -133,6 +135,9 @@
         z-index: 2;
       }
       /* Drawing and texts*/
+      .bg1 {
+        background: #fa5480;
+      }
     </style>
   </head>
   <body>
@@ -332,9 +337,9 @@
       </div>
       <div class="row">
         <!--  -->
-        <div id="trapezoid"><div​ class="khFont" id="textinside">វីដេអូ ></div​></div>
-        <div id="triangle-topleft"></div>
-        <div id="line"></div>
+        <div id="trapezoid1"><div​ class="khFont" id="textinside1">កម្សាន្ដ ></div​></div>
+        <div id="triangle-topleft1"></div>
+        <div id="line1"></div>
         <!--  -->
       </div>
     </div>
