--- a/Sabay_News.html
+++ b/Sabay_News.html
@@ -20,7 +20,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanuman:wght@400;700&display=swap" rel="stylesheet" />
     <!-- Animation Library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <!--  -->
+    <!-- CSS External -->
     <link rel="stylesheet" href="Sabay_News_Colors.css" />
     <title>Sabay News</title>
     <style>
