--- a/Sabay_News.html
+++ b/Sabay_News.html
@@ -353,7 +353,7 @@
           <div class="col-4">
             <img src="Sabay_News Images/Tech_News.jpg" class="card-img-top" alt="" />
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p style="background-color: #fa5480;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
           </div>
 
