--- a/Ridh_Online_Shopping.html
+++ b/Ridh_Online_Shopping.html
@@ -126,8 +126,8 @@
         <div class="card col" style="width: 18rem">
           <img src="Images/MacBook-Pro-16-inch.jpg" class="card-img-top" alt="MacBook Pro 16 inch" />
           <div class="card-body">
-            <h5 class="card-title">MacBook Pro 16</h5>
-            <p class="card-text">
+            <h5 class="card-title head-card">MacBook Pro 16</h5>
+            <p class="card-text body-card">
               Processor Core i20 9083 <br />
               RAM 93GB <br />
               SSD 300T <br />Refresh Rate 1Hz
@@ -137,9 +137,9 @@
         </div>
         <div class="card col" style="width: 18rem">
           <img src="Images/MacBook-Pro-13-inch.jpg" class="card-img-top" alt="MacBook Pro 13 inch" />
-          <div class="card-body">
+          <div class="card-body head-card">
             <h5 class="card-title">MacBook Pro 13</h5>
-            <p class="card-text">
+            <p class="card-text body-card">
               Processor Core i20 9083 <br />
               RAM 93GB <br />
               SSD 300T <br />Refresh Rate 1Hz
@@ -150,8 +150,8 @@
         <div class="card col" style="width: 18rem">
           <img src="Images/MacBook-Air.jpg" class="card-img-top" alt="MacBook Air" />
           <div class="card-body">
-            <h5 class="card-title">MacBook Air</h5>
-            <p class="card-text">
+            <h5 class="card-title head-card">MacBook Air</h5>
+            <p class="card-text body-card">
               Processor Core i20 9083 <br />
               RAM 93GB <br />
               SSD 300T <br />Refresh Rate 1Hz
@@ -165,8 +165,8 @@
         <div class="card col" style="width: 18rem">
           <img src="Images/MacBook-Pro-16-inch.jpg" class="card-img-top" alt="MacBook Pro 16 inch" />
           <div class="card-body">
-            <h5 class="card-title">MacBook Pro 16</h5>
-            <p class="card-text">
+            <h5 class="card-title head-card">MacBook Pro 16</h5>
+            <p class="card-text body-card">
               Processor Core i20 9083 <br />
               RAM 93GB <br />
               SSD 300T <br />Refresh Rate 1Hz
@@ -177,8 +177,8 @@
         <div class="card col" style="width: 18rem">
           <img src="Images/MacBook-Pro-13-inch.jpg" class="card-img-top" alt="MacBook Pro 13 inch" />
           <div class="card-body">
-            <h5 class="card-title">MacBook Pro 13</h5>
-            <p class="card-text">
+            <h5 class="card-title head-card">MacBook Pro 13</h5>
+            <p class="card-text body-card">
               Processor Core i20 9083 <br />
               RAM 93GB <br />
               SSD 300T <br />Refresh Rate 1Hz
@@ -188,9 +188,9 @@
         </div>
         <div class="card col" style="width: 18rem">
           <img src="Images/MacBook-Air.jpg" class="card-img-top" alt="MacBook Air" />
-          <div class="card-body">
+          <div class="card-body head-card">
             <h5 class="card-title">MacBook Air</h5>
-            <p class="card-text">
+            <p class="card-text body-card">
               Processor Core i20 9083 <br />
               RAM 93GB <br />
               SSD 300T <br />Refresh Rate 1Hz
